# linkedin-bot

./: main.py  pyproject.toml
data/raw/: jobs_1.csv
notebooks/: LB_01 - Ttry langgraph with other  models.ipynb  LB_02 -Linkedin jobs .ipynb  LB_03 - Toghater AI POC.ipynb
