[project]
name = "linkedin-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.27",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pydantic-ai>=0.0.55",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "transformers>=4.51.1",
]
